# mio

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  .mise.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  go.work  go.work.sum  plan.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml
attachment-downloader/: Dockerfile  go.mod  go.sum
deploy/: docker-compose.yml
deploy/fluxcd/: release-attachment-downloader.yaml
deploy/gke/: setup.sh
deploy/k8s/: namespace.yaml
deploy/local/: docker-compose.yml
deploy/postgres/: init.sql
docs/: deployment.md  system-architecture.md
docs/runbooks/: attachment-downloader-iam.md  attachment-gdpr-delete.md  cliq-webhook-down.md
examples/echo-consumer/: Dockerfile  echo.py  pyproject.toml
examples/echo-consumer/tests/: test_echo_handler.py
gateway/: Dockerfile  go.mod  go.sum
gateway/integration_test/: cliq_inbound_test.go  cliq_outbound_fairness_test.go
plans/260507-0904-mio-bootstrap/: master.md
plans/260509-2328-attachment-persistence/: phase-01-extend-attachment-proto.md  phase-02-storage-interface-and-gcs-impl.md  phase-03-scaffold-sidecar-binary.md  phase-04-wire-cliq-fetch-and-publish.md  phase-05-helm-chart-and-flux-deploy.md  phase-06-retention-and-gdpr-cli.md  phase-07-enriched-stream-consumer-rewrite-and-smoke.md  plan.md
plans/260510-0152-cliq-oauth-token-refresh/: plan.md
plans/reports/: cook-260508-1224-p0-reserve-and-scaffold.md  cook-260508-1418-p7-helm-and-nats-gke.md  research-260507-1102-channels-data-model.md  research-260508-1056-p0-scaffold-monorepo-infra.md  research-260508-1056-p1-proto-envelope-design.md  research-260508-1056-p2-sdk-nats-jetstream-clients.md  research-260508-1056-p3-gateway-cliq-inbound-webhook.md  research-260508-1056-p4-echo-consumer-jetstream-pull.md  research-260508-1056-p5-outbound-rate-limit-edit-ux.md  research-260508-1056-p6-sink-gcs-archival-bigquery.md  research-260508-1056-p7-helm-nats-jetstream-gke.md  research-260508-1056-p8-poc-deploy-observability-gke.md  research-260508-1056-p9-slack-adapter-second-channel.md  research-260508-1153-local-dev-cicd-image-publish.md  review-260508-1133-bootstrap-plan-audit.md  review-260508-1213-pre-cook-readiness.md
plans/visuals/: mio-architecture-deck.html  mio-landing.html
playground/cliq/: .env.example  .gitignore  Dockerfile  Makefile  compose.yaml  (+7 more)
proto/: channels.yaml
sdk-go/: channeltypes.go  client.go  consume_inbound.go  consume_outbound.go  go.mod  go.sum  metrics.go  publish_inbound.go  publish_outbound.go  sdk_test.go  subjects.go  tracing.go  version.go
sdk-py/: pyproject.toml
sdk-py/mio/: __init__.py  channeltypes.py  client.py  metrics.py  subjects.py  tracing.py  version.py
sdk-py/tests/: test_sdk.py
sink-gcs/: Dockerfile  README.md  go.mod  go.sum
(+161 files in other folders)
